refactor(layout): navbar y footer: - Se rediseño completamento los diseños de ambos componentes. - Se separaron media-queries, variables y mixins en archivos globales. - Se maneja en los servicios la carga de localStorage con isPlatformBrowser en caso de aún no cargar en el DOM

--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -1,6 +1,6 @@
 @use '@angular/material' as mat;
 @use '../../styles/_mixins.scss' as m;
-@use '../_variables.scss' as v;
+@use './_variables.scss' as v;
 
 .layout-wrapper {
   display: flex;
