--- a/src/app/components/layout/footer/footer.component.scss
+++ b/src/app/components/layout/footer/footer.component.scss
@@ -50,7 +50,10 @@
 // Contenido principal
 .footer-content {
   @include mixins.footer-grid;
-  margin-bottom: 3rem;
+  
+  &{
+    margin-bottom: 3rem;
+  }
 
   @include mq.mobile-only {
     margin-bottom: 2rem;
